--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   shared_preferences: ^2.0.8
   flutter_mobx: ^2.0.2
   get_it: ^7.2.0
+  dio: ^4.0.0
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
