--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   get_it: ^7.2.0
   dio: ^4.0.0
   cached_network_image: ^3.1.0
+  shimmer_animation: ^2.1.0
+  drop_cap_text: ^1.1.3
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
