--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,11 @@ dependencies:
   flutter_mobx: ^2.0.2
   get_it: ^7.2.0
   dio: ^4.0.0
-  cached_network_image: ^3.1.0
   shimmer_animation: ^2.1.0
   drop_cap_text: ^1.1.3
   carousel_slider: ^4.0.0
+  youtube_player_iframe: ^2.2.2
+  flutter_native_splash: ^1.2.4
 
 dev_dependencies:
   flutter_test:
