--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider: ^4.0.0
   youtube_player_iframe: ^2.2.2
   flutter_native_splash: ^1.2.4
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
