--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,9 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_native_splash: ^1.2.4
   cached_network_image: ^3.1.0
-  pinch_zoom_image_last: ^0.4.1
   flutter_svg: ^0.23.0+1
+  flutter_launcher_icons: ^0.9.2
+  easy_image_viewer: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/noConnection/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
