--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_svg: ^0.23.0+1
   flutter_launcher_icons: ^0.9.2
   easy_image_viewer: ^1.0.3
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
   assets:
     - assets/images/
     - assets/noConnection/
+    - assets/nothingFound/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
