--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_svg: ^0.23.0+1
   flutter_launcher_icons: ^0.9.2
   photo_view: ^0.13.0
+  device_preview: ^1.0.0
 
 dev_dependencies:
   flutter_test:
