--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   photo_view: ^0.13.0
   device_preview: ^1.0.0
   double_back_to_close_app: ^2.1.0
-  
+  another_xlider: ^1.0.1+2
+  flutter_dotenv: ^4.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
     - assets/noConnection/
     - assets/nothingFound/
     - assets/
+    - api.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
