--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   animated_card: ^2.0.0
   transition: ^2.0.2
   url_launcher: ^6.0.9
-  flutter_speed_dial: ^4.4.0+1
+  flutter_speed_dial: ^6.0.0
   line_icons: ^2.0.1
   shared_preferences: ^2.0.8
   flutter_mobx: ^2.0.2
@@ -42,15 +42,15 @@ dependencies:
   shimmer_animation: ^2.1.0
   drop_cap_text: ^1.1.3
   carousel_slider: ^4.0.0
-  flutter_native_splash: ^1.2.4
+  flutter_native_splash: ^2.1.6
   cached_network_image: ^3.1.0
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^1.0.3
   flutter_launcher_icons: ^0.9.2
   photo_view: 
   device_preview: ^1.0.0
   double_back_to_close_app: ^2.1.0
   another_xlider: ^1.0.1+2
-  flutter_dotenv: ^4.0.0-nullsafety.0
+  flutter_dotenv: ^5.0.2
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
