--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   cached_network_image: ^3.1.0
   flutter_svg: ^1.0.3
   flutter_launcher_icons: ^0.9.2
-  photo_view: 
+  photo_view: ^0.14.0
   device_preview: ^1.0.0
   double_back_to_close_app: ^2.1.0
   another_xlider: ^1.0.1+2
