--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   double_back_to_close_app: ^2.1.0
   another_xlider: ^1.0.1+2
   flutter_dotenv: ^5.0.2
+  rate: ^0.0.2
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
