--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,32 +29,33 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.1.0
+  google_fonts: ^5.1.0
   animated_card: ^2.0.0
   transition: ^2.0.2
   url_launcher: ^6.0.9
-  flutter_speed_dial: ^6.0.0
+  flutter_speed_dial: ^7.0.0
   line_icons: ^2.0.1
   shared_preferences: ^2.0.8
   flutter_mobx: ^2.0.2
   get_it: ^7.2.0
-  dio: ^4.0.0
+  dio: ^5.3.2
   shimmer_animation: ^2.1.0
   drop_cap_text: ^1.1.3
   carousel_slider: ^4.0.0
   flutter_native_splash: ^2.1.6
   cached_network_image: ^3.1.0
-  flutter_svg: ^1.0.3
-  flutter_launcher_icons: ^0.9.2
+  flutter_svg: ^2.0.7
+  flutter_launcher_icons: ^0.13.1
   photo_view: ^0.14.0
   device_preview: ^1.0.0
   double_back_to_close_app: ^2.1.0
-  another_xlider: ^1.0.1+2
+  another_xlider: ^3.0.1
   flutter_dotenv: ^5.0.2
   rate: ^0.0.2
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.18.1
+  flutter_inappwebview: ^5.7.2+3
 
 dev_dependencies:
   flutter_test:
